# BioVoice-App

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Eden.md  Idan.md  MIGRATION_POSTMORTEM.md  Plan.md  README.md  Yoav.md  docker-compose.yml
.github/workflows/: ci.yml  lighthouse.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py  models.py  schemas.py
backend/app/api/: __init__.py  admin_routes.py  dependencies.py  routes.py
backend/app/core/: calibration.py  config.py  container.py  logging_setup.py  metrics.py
backend/app/services/: acoustic_features.py  audio.py  audit.py  auth.py  deepfake_agent.py  detector.py  explain.py  rate_limit.py  speaker_encoder.py  spoof.py  sub_classifier.py  verification.py
backend/app/services/detectors/: __init__.py  aasist.py  base.py  ensemble.py  mlp.py  prosody.py  rawnet2.py  wav2vec_aasist.py
backend/app/services/llm/: __init__.py  anthropic_client.py  base.py  factory.py
backend/app/storage/: memory_store.py  sqlite_store.py
backend/scripts/: _make_demo_wavs.py  _make_fallback_spoof.py  _plotting.py  bench_eer_voxceleb.py  bench_latency.py  bench_spoof_detection.py  bench_verify.py  make_libri_pairs.py  make_spoof_eval.py  migrate_sqlite_to_postgres.py  seed_demo.py  setup_xtts.sh  train_sub_classifier.py
backend/tests/: conftest.py  test_admin_routes.py  test_auth_session.py  test_bench_helpers.py  test_config.py  test_cookie_auth.py  test_embeddings_route.py  test_explain.py  test_fallback_spoof.py  test_identify.py  test_metrics_summary.py  test_optional_speaker_models.py  test_provenance.py  test_rate_limit.py  test_real_models_integration.py  test_sample_quality.py  test_secret_scan.py  test_seed_demo.py  test_session_id.py  test_spoof.py  test_spoof_engines.py  test_spoof_routes.py  test_spoof_test_route.py  test_static_mount.py  test_sub_classifier.py  test_user_delete.py  test_users.py  test_vad.py  test_verification.py
biovoice/core/: deepfake_detector.py
biovoice/ui/: deepfake_generator_view.py  enrollment_view.py  processing_view.py  results_panel.py  verification_view.py
biovoice/ui/resources/: styles.qss
biovoice/ui/widgets/: concept_bar.py  gauge_widget.py  recording_controls.py  waveform_widget.py
deploy/: backup.sh  nginx.conf  restore.sh  smoke.sh
docs/: audit-v1.0.md  benchmarks.md  deployment.md  hardware.md  i18n.md  operator-guide.md  postgres_migration.md  pwa-install.md  qa.md  remaining_work.md  thresholds.md
docs/paper/: biovoice.tex  discussion.md  evaluation.md  methodology.md  references.bib  results_latency_local.json  sub_classifier.md
docs/paper/results/: librispeech_test_clean.json  spoof_libri_say.json
docs/paper/results/plots/librispeech_test_clean/: scores.csv
docs/paper/results/plots/spoof_libri_say/: scores.csv
docs/superpowers/specs/: 2026-05-12-packaging-design.md
frontend/: .gitignore  index.html  lighthouserc.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/public/audio-worklets/: recorder-processor.js
frontend/src/: App.tsx  admin-screen.jsx  app.jsx  audio.jsx  console-ext.jsx  console.jsx  main.tsx  more-screens.jsx  screens.jsx  styles.css  types.ts  visuals.jsx
frontend/src/components/: AppWindow.tsx  AudioRecorder.tsx  AuthRecordingForm.tsx  Badge.tsx  Button.tsx  DegradedBanner.tsx  EnrollModal.tsx  ExplainTab.tsx  Gauge.tsx  LanguageSwitcher.tsx  Panel.tsx  ProgressBar.tsx  RecordPanel.tsx  ResultCard.tsx  SimilarityInsights.tsx  SpoofStudio.tsx  StageList.tsx  StatusPill.tsx  VerificationHistory.tsx  Waveform.tsx
frontend/src/hooks/: useEmbeddingProjection.ts  useLiveEmbedding.ts
frontend/src/i18n/: en.json  he.json  index.ts
frontend/src/lib/: MicDeniedCallout.tsx  api.test.ts  api.ts  audio.test.ts  audio.ts  dsp.test.ts  dsp.ts  explainAudio.ts  flowState.ts  format.test.ts  format.ts  pca.test.ts  pca.ts  profileVisual.ts  session.tsx  thresholds.ts  useCalibratedTimeline.ts  useMetricsSummary.test.ts  useMetricsSummary.ts  useResultsPolling.ts  wav.ts
frontend/src/screens/: DeepfakeResultScreen.tsx  EnrollScreen.tsx  HomeScreen.tsx  LoginScreen.tsx  ProcessingScreen.tsx  ShowcaseScreen.tsx  TestLabScreen.tsx  VerifyResultScreen.tsx
frontend/src/styles/: base.css  primitives.css  responsive.css  rtl.css  tokens.css
frontend/src/sw/: sw.ts
frontend/tests/: setup-vitest.ts
frontend/tests/e2e/: admin.spec.ts  axe.spec.ts  enroll.spec.ts  i18n.spec.ts  smoke.spec.ts  verify.spec.ts
